modified:   backend/src/index.js 	modified:   backend/src/routes.js 	modified:   frontend/src/Components/NewPost.js 	modified:   frontend/src/Components/Posts.js 	modified:   frontend/src/Components/RecentPosts.js 	modified:   frontend/src/Modules/DrawElement.js 	new file:   frontend/src/Modules/GetData.js 	modified:   frontend/src/index.css 	modified:   frontend/src/routes.js

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,9 +68,13 @@ body {
 
 /* Add a card effect for articles */
 .post, .menu {
+  font-size: 16pt;
   background-color: white;
   padding: 20px;
   margin-top: 20px;
+}
+.menu a {
+  display: block;
 }
 .post .p {
 	width: 100%
