modified:   ../frontend/src/Components/Post.js 	modified:   ../frontend/src/Components/Posts.js 	modified:   ../frontend/src/Modules/Content.js 	modified:   ../frontend/src/Modules/DrawElement.js 	modified:   ../frontend/src/Modules/Sidebar.js 	modified:   ../frontend/src/Modules/SwitchRoutes.js 	modified:   ../frontend/src/index.css 	modified:   ../frontend/src/routes.js

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,8 +47,11 @@ body {
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .content {   
+  display: block;
   float: left;
   width: 75%;
+  min-width: 50%;
+  max-width: 75%;
 }
 
 /* Right column */
