modified:   ../frontend/src/Modules/SwitchRoutes.js 	modified:   ../frontend/src/index.css 	modified:   ../frontend/src/routes.js

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -86,7 +86,7 @@ body {
 /* Clear floats after the columns */
 .body:after {
   content: "";
-  display: table;
+  display: block;
   clear: both;
 }
 
