--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,14 +8,25 @@
 
 body {
   padding: 10px;
-  background: #f1f1f1;
+  background: #fbfbfc;
 }
-
+.post, .menu,  .header, .footer {
+  background-color: #fefcff;
+  border-radius: 10px;
+  border: 1px solid #50cacf;
+  box-shadow: 2px 1px #20759c;
+}
+.sidebar {
+}
 /* Header/Blog Title */
 .header {
   padding: 30px;
   text-align: center;
-  background: white;
+}
+.header, .footer {
+  min-width: 700px;
+  max-width: 1350px;
+  width: 1220px;
 }
 
 .header h1 {
@@ -49,17 +60,19 @@ body {
 .content {   
   display: block;
   float: left;
-  width: 75%;
-  min-width: 50%;
-  max-width: 75%;
+  min-width: 350px;
+  max-width: 1000px;
+  width: 900px;
 }
 
 /* Right column */
 .sidebar {
   float: left;
-  width: 25%;
-  background-color: #f1f1f1;
-  padding-left: 20px;
+  margin-left: 20px;
+  margin-top: 20px;
+  min-width: 250px;
+  max-width: 350px;
+  width: 300px;
 }
 
 /* Fake image */
@@ -72,12 +85,32 @@ body {
 /* Add a card effect for articles */
 .post, .menu {
   font-size: 16pt;
-  background-color: white;
   padding: 20px;
-  margin-top: 20px;
+
+  margin-bottom: 10px;
 }
-.menu a {
+.menu p {
   display: block;
+  padding-left: 15px;
+  padding-bottom: 5px;
+  margin-bottom: 20px;
+  border-bottom: 2px dotted #50cacf;
+  border-bottom-right-radius: 8px;
+}
+.menu h3 {
+  display: block;
+  text-align: center;
+  margin-bottom: 15px;
+  padding-bottom: 5px;
+  border: 0px none;
+}
+.menu h3 a {
+  color: #333;
+  text-decoration: none;
+}
+.menu p a {
+  color: #444;
+  text-decoration: none;
 }
 .post .p {
 	width: 100%
@@ -94,7 +127,6 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
   margin-top: 20px;
 }
 
@@ -114,9 +146,11 @@ body {
   }
 }
 h1, h2, h3, h4, h5, h6, header, footer, .h1, .h2, .h3, .h4, .h5, .h6, .header, .footer {
-	font-family: 'Jaldi', sans-serif;
-	width: 100%;
-	display: block;
+  font-family: 'Jaldi', sans-serif;
+  display: block;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  width: 100%;
 }
 a.h3 {
 	color: #333;
